Removed dependencies to profile
