# association/library/rest-adapter/src/main/resources/openapi/components/book_lendings.yml
@@ -11,16 +11,40 @@ components:
         type: array
         items:
           type: string
-          pattern: '^(title|fullname)\|(asc|desc)$'
+          pattern: '^(book.title.title|borrower.fullname)\|(asc|desc)$'
           example: title|asc
   schemas:
+    Borrower:
+      type: object
+      required: [number, name]
+      properties:
+        number:
+          $ref: '../common/ids.yml#/components/schemas/Id'
+        name:
+          $ref: '#/components/schemas/BorrowerName'
+    BorrowerName:
+      type: object
+      required: [firstName, lastName, fullName]
+      properties:
+        firstName:
+          type: string
+          example: 'John'
+          maxLength: 50
+        lastName:
+          type: string
+          example: 'Smith'
+          maxLength: 50
+        fullName:
+          type: string
+          example: 'John Smith'
+          maxLength: 100
     BookLending:
       type: object
       properties:
         book:
           $ref: '#/components/schemas/BookLendingBook'
         borrower:
-          $ref: 'profiles.yml#/components/schemas/MinimalProfile'
+          $ref: '#/components/schemas/Borrower'
         lendingDate:
           $ref: '../common/dates.yml#/components/schemas/Date'
         returnDate:
@@ -33,7 +57,7 @@ components:
       type: object
       properties:
         borrower:
-          $ref: 'profiles.yml#/components/schemas/MinimalProfile'
+          $ref: '#/components/schemas/Borrower'
         lendingDate:
           $ref: '../common/dates.yml#/components/schemas/Date'
         returnDate:
